# rooki-ai

./: .env.example  README.md  crewai_flow.html  pyproject.toml
.github/profile/: agents.md  other_tools.md  specs.md  tasks.md  tools.md
.github/standup/: standup_spec.md
knowledge/: schema.txt
src/rooki_ai/: fast.py  main.py  test.py
src/rooki_ai/crew/: crew.py
src/rooki_ai/crews/: __init__.py  route.py  voice_profile.py
src/rooki_ai/crews/category/: category.py
src/rooki_ai/crews/category/config/: agents.yaml  tasks.yaml
src/rooki_ai/crews/config/: agents.yaml  tasks.yaml
src/rooki_ai/crews/daily_prep/: __init__.py  category.py  daily_prep.py
src/rooki_ai/crews/daily_prep/config/: agents.yaml  tasks.yaml
src/rooki_ai/crews/route/: __init__.py  route.py
src/rooki_ai/crews/route/config/: agents.yaml  tasks.yaml
src/rooki_ai/crews/voice_profile/: __init__.py
src/rooki_ai/crews/voice_profile/config/: agents.yaml  tasks.yaml
src/rooki_ai/flows/: coach.py
src/rooki_ai/models/: __init__.py  api.py  coach.py  daily_prep.py  voice_profile.py
src/rooki_ai/schemas/: __init__.py  category.py  id.py
src/rooki_ai/tools/: __init__.py  get_trending_tweets_tool.py  json_schema_validator_tool.py  supabase_get_voice_tool.py  supabase_user_tweets_storage_url_tool.py  tweet_history_storage_tool.py  tweet_mcp_tool.py
src/rooki_ai/utils/: __init..py  get_chat_background.py  update_voice_config_in_supabase.py
